# opoSqueue

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/piskels/: rain_39_20-20260511-163115.piskel  sun_100_80-20260511-161823.piskel
core/: polling_service.py  profile_manager.py  slurm_parser.py  state_store.py
models/: job.py  node.py
src/: slurm_ssh.py
src/oposqueue/: main.py
src/oposqueue/core/: asset_path.py  polling_service.py  profile_manager.py  slurm_parser.py  ssh_manager.py
src/oposqueue/models/: job.py  node.py  ssh_profile.py
src/oposqueue/storage/profiles/: anthill4.0.json
src/oposqueue/ui/piskels/: cloudy_59_40-20260511-162346.piskel  opossum_sprite-20260511-161303.piskel
src/oposqueue/ui/widgets/: job_queue_panel.py  node_tile.py  save_slot_widget.py
src/oposqueue/ui/windows/: cluster_view.py  connection_dialogue.py  save_select_screen.py  title_screen.py
storage/profiles/: anthill3.0.json
ui/piskels/: storm_19_00-20260511-163634.piskel  suncloud_79_60-20260511-162147.piskel
ui/widgets/: fonts.py  job_queue_panel.py  node_tile.py  save_slot_widget.py
ui/windows/: cluster_view.py  connection_dialogue.py  save_select_screen.py  title_screen.py
